[metadata]
# replace with your username:
name = lwsspy.seismo
version = 0.0.2
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Seismology function of lwsspy
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/lwsspy.ml
project_urls =
    Documentation = https://github.com/lsawade/lwsspy
    TravisCI = https://travis-ci.com/github/lwsspy.ml/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Machine, Learning, Programming, 

[options]
namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =  
    numpy
    matplotlib
    obspy
    mpi4py
    matplotlib
    autopep8
    cartopy
    lwsspy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx
    numpydoc
    sphinx-book-theme
tests = 
    pytest
    py

[options.entry_points]
    console_scripts =
        gcmt3d-plot-measurement-histograms=lwsspy.gcmt3d.plot_measurements:bin
        gcmt3d-plot-measurement-histograms-pkl=lwsspy.gcmt3d.plot_measurements:bin_plot_pickles
        gcmt3d-fix-dlna-database=lwsspy.gcmt3d.M0:bin_fix_dlna_database
        gcmt3d-fix-dlna-event=lwsspy.gcmt3d.M0:bin_fix_event
        gcmt3d-process-final = lwsspy.gcmt3d.GCMT3DInversion:bin_process_final
        gcmt3d-invert-cmt = lwsspy.gcmt3d.GCMT3DInversion:bin
        gcmt3d-syncdata = lwsspy.gcmt3d.sync_data:bin
        gcmt3d-optimstats = lwsspy.gcmt3d.get_optimization_stats:bin
        compare-catalogs=lwsspy.seismo.compare_catalogs:bin
        download-data = lwsspy.seismo.download_waveforms_to_storage:bin
        plot_csv_depth_slice = lwsspy.seismo.specfem.plot_csv_depth_slice:bin
        plot_specfem_xsec_depth = lwsspy.seismo.specfem.plot_specfem_xsec_depth:bin

[options.packages.find]
where = src