[metadata]
# replace with your username:
name = lwsspy.seismo
version = 0.0.2
author = Lucas Sawade
author_email = lsawade@princeton.edu
description = Seismology function of lwsspy
long_description = file: README.md
long_description_content_type = text/markdown
maintainer_email = lsawade@princeton.edu
url = https://github.com/lsawade/lwsspy.seismo
project_urls =
    Documentation = https://lwsspy.github.io/lwsspy.seismo/
    TravisCI = https://travis-ci.com/github/lwsspy.seismo/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Seismology, Programming, Seismic Processing

[options]
namespace_packages = lwsspy
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
install_requires =  
    numpy
    matplotlib
    mpi4py
    matplotlib
    autopep8
    cartopy
    lwsspy
    obspy
    pyflex @ git+https://github.com/wjlei1990/pyflex.git@merge
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx
    numpydoc
    sphinx-book-theme
tests = 
    pytest
    py

[options.entry_points]
console_scripts =
    compare-catalogs=lwsspy.seismo.compare_catalogs:bin
    download-data = lwsspy.seismo.download_waveforms_to_storage:bin
    plot_csv_depth_slice = lwsspy.seismo.specfem.plot_csv_depth_slice:bin
    plot_specfem_xsec_depth = lwsspy.seismo.specfem.plot_specfem_xsec_depth:bin
    plot-beach = lwsspy.seismo.source:plot_beach
    plot-beachfig = lwsspy.seismo.source:plot_beachfig

[options.packages.find]
where = src